still trying to fix the image with the class name of ts-img, it keeps stretching on a mobile phone after it has been hosted

--- a/styles/index.css
+++ b/styles/index.css
@@ -389,9 +389,12 @@ nav .login-create {
   font-weight: 500;
 }
 
+.ts-img {
+  height: auto;
+}
+
 .ts-img img{
   max-width: 100%;
-  height: 100%;
 }
 
 /* FOOTER */
@@ -802,7 +805,7 @@ nav .login-create {
 
   .ts-img {
     max-width: 100%;
-    height: auto;
+    /* height: auto; */
   }
 
   /* MEDIA QUERY FOR FOOTER */
